tests/ui/imports/import-after-macro-expand-12.stderr
error[E0659]: `B` is ambiguous
  --> $DIR/import-after-macro-expand-12.rs:27:9
   |
LL |         B::ASSOC
   |         ^ ambiguous name
   |
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `B` could refer to the enum imported here
  --> $DIR/import-after-macro-expand-12.rs:26:13
   |
LL |         use self::*;
   |             ^^^^^^^
   = help: consider adding an explicit import of `B` to disambiguate
note: `B` could also refer to the enum imported here
  --> $DIR/import-after-macro-expand-12.rs:26:13
   |
LL |         use self::*;
   |             ^^^^^^^
   = help: consider adding an explicit import of `B` to disambiguate

error[E0308]: mismatched types
  --> $DIR/import-after-macro-expand-12.rs:27:9
   |
LL |         B::ASSOC
   |         ^^^^^^^^ expected `u16`, found `u8`
   |
help: you can convert a `u8` to a `u16`
   |
LL |         B::ASSOC.into()
   |                 +++++++

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0659.
For more information about an error, try `rustc --explain E0308`.
